--- a/htcTouch.html
+++ b/htcTouch.html
@@ -1102,7 +1102,7 @@
     integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script src="./assets/js/owl.carousel.min.js"></script>
 <script src="./assets/js/slick.min.js"></script>
-<script src="./assets/js/script.js"></script>
+<script src="./assets/js/basket.js"></script>
 <script src="./assets/js/htc.js"></script>
 </body>
 </html>
