--- a/registration.html
+++ b/registration.html
@@ -934,6 +934,6 @@
     integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script src="./assets/script/owl.carousel.min.js"></script>
     <script src="./assets/js/collections.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/basket.js"></script>
 </body>
 </html>
