--- a/collections.html
+++ b/collections.html
@@ -1191,7 +1191,7 @@
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
     integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 <script src="./assets/script/owl.carousel.min.js"></script>
+<script src="./assets/js/basket.js"></script>
 <script src="./assets/js/collections.js"></script>
-<script src="./assets/js/script.js"></script>
 </body>
 </html>
