--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                            </div>
                         </div>
                         <div class="view_more btn btn-danger">
-                         View More
+                         <a class="text-decoration-none text-white" href="./index.html">View More</a>
                      </div>
                       </div>
                 </div>
@@ -2548,27 +2548,27 @@
                 <div class="owl-carousel owl-theme">
                     <div class="container d-flex">
                     
-                    <div class="item m-3">
+                    <div class="item m-0 m-md-3">
                         <div class="image">
                             <img src="./assets/images/Brand-Logo-1-200x60.png" alt="">
                         </div>
                     </div>
-                    <div class="item m-3">
+                    <div class="item m-0 m-md-3">
                         <div class="image">
                             <img src="./assets/images/Brand-Logo-2-200x60 (1).png" alt="">
                         </div>
                     </div>
-                    <div class="item m-3">
+                    <div class="item m-0 m-md-3">
                         <div class="image">
                             <img src="./assets/images/Brand-Logo-3-200x60 (1).png" alt="">
                         </div>
                     </div>
-                    <div class="item m-3">
+                    <div class="item m-0 m-md-3">
                         <div class="image">
                             <img src="./assets/images/Brand-Logo-4-200x60 (1).png" alt="">
                         </div>
                     </div>
-                    <div class="item m-3">
+                    <div class="item m-0 m-md-3">
                         <div class="image">
                             <img src="./assets/images/Brand-Logo-5-200x60.png" alt="">
                         </div>
@@ -2739,6 +2739,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <script src="./assets/js/owl.carousel.min.js"></script>
   <script src="./assets/js/basket.js"></script>
+  <script src="./assets/js/header.js"></script>
    <script src="./assets/js/script.js"></script>
 </body>
 </html>
