changed htc image and device

--- a/collections.html
+++ b/collections.html
@@ -628,11 +628,11 @@
                                     <div class="caption text-center">
                                         <div class="description">
                                             <p class="title">
-                                              HTC Touch HD</p>
+                                                Nikon D300</p>
                                         </div>
                                         <div class="price">
                                             <p class="prices">
-                                                95.72€
+                                                98.72€
                                               </p>
                                         </div>
                                         <div class="add_cart">
@@ -685,11 +685,11 @@
                                 <div class="caption text-center">
                                     <div class="description">
                                         <p class="title">
-                                          HTC Touch HD</p>
+                                            Canon EOS 5D</p>
                                     </div>
                                     <div class="price">
                                         <p class="prices">
-                                            95.72€
+                                            122.00€
                                           </p>
                                     </div>
                                     <div class="add_cart">
@@ -742,11 +742,11 @@
                             <div class="caption text-center">
                                 <div class="description">
                                     <p class="title">
-                                      HTC Touch HD</p>
+                                        Apple Cinema 30"</p>
                                 </div>
                                 <div class="price">
                                     <p class="prices">
-                                        95.72€
+                                        122.00€
                                       </p>
                                 </div>
                                 <div class="add_cart">
