htc prices changed

--- a/htcTouch.html
+++ b/htcTouch.html
@@ -674,7 +674,7 @@
                                   Canon EOS 5D</p>
                             </div>
                             <div class="price">
-                                <p class="prices">
+                                <p style="color: red;" class="prices">
                                     95.72€
                                   </p>
                             </div>
@@ -731,7 +731,7 @@
                                   Nikon D300</p>
                             </div>
                             <div class="price">
-                                <p class="prices">
+                                <p style="color: red;" class="prices">
                                     96.89€
                                   </p>
                             </div>
@@ -788,7 +788,7 @@
                                   Ipod Touch</p>
                             </div>
                             <div class="price">
-                                <span style="color: gray;">95.72€</span><span  class="prices">39.81€</span>
+                                <span style="color: gray;">95.72€</span><span style="color: red;"  class="prices">39.81€</span>
                             </div>
                             <div class="add_cart">
                                 Add To Cart
@@ -843,7 +843,7 @@
                                  Ipod Nano</p>
                             </div>
                             <div class="price">
-                                <p class="prices">
+                                <p style="color: red;" class="prices">
                                     95.72€
                                   </p>
                             </div>
